--- a/demo-aws-beanstalk/pom.xml
+++ b/demo-aws-beanstalk/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo-aws-beanstalk</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>demo-aws-beanstalk</name>
 	<description>Demo project for Spring Boot</description>
 
